--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,11 @@
 {
-  "presets": [
-	  ["@babel/env", 
-  {
+	"presets": [
+		["@babel/env", 
+	{
 
-  }]
-  ]
+	}]
+	],
+	"plugins": [
+		"@babel/plugin-syntax-dynamic-import"
+	]
 }
