--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "mogo-ui",
 	"description": "mogo company vue ui",
-	"version": "1.0.7",
+	"version": "1.0.8",
 	"author": "luckduvip <luckduvip@163.com>",
 	"main": "dist/build.js",
 	"license": "MIT",
 	"scripts": {
-		"dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+		"dev": "cross-env NODE_ENV=development webpack-dev-server --mode development --progress",
 		"build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
 	},
 	"dependencies": {
@@ -14,7 +14,6 @@
 		"@babel/preset-env": "^7.1.5",
 		"@moohng/postcss-px2vw": "^1.0.2",
 		"babel-loader": "^8.0.4",
-		"cross-env": "^5.2.0",
 		"css-loader": "^1.0.0",
 		"file-loader": "^2.0.0",
 		"mogo-lib": "^1.0.0",
@@ -22,9 +21,6 @@
 		"postcss-loader": "^3.0.0",
 		"sass-loader": "^7.1.0",
 		"url-loader": "^1.1.2",
-		"vue": "^2.5.11",
-		"vue-loader": "^15.4.2",
-		"vue-template-compiler": "^2.5.17",
 		"webpack": "^4.23.1",
 		"webpack-cli": "^3.1.2",
 		"webpack-dev-server": "^3.1.10"
@@ -37,5 +33,15 @@
 		"url": "https://github.com/luckduvip/mogo-ui/issues"
 	},
 	"homepage": "https://github.com/luckduvip/mogo-ui#readme",
-	"devDependencies": {}
+	"devDependencies": {
+		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
+		"axios": "^0.19.0",
+		"cross-env": "^5.2.0",
+		"html-webpack-plugin": "^3.2.0",
+		"qs": "^6.7.0",
+		"vue": "^2.6.10",
+		"vue-loader": "^15.7.1",
+		"vue-router": "^3.0.7",
+		"vue-template-compiler": "^2.6.10"
+	}
 }
