--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "mogo-ui",
 	"description": "mogo company vue ui",
-	"version": "1.0.10",
+	"version": "1.0.11",
 	"author": "luckduvip <luckduvip@163.com>",
 	"main": "dist/build.js",
 	"license": "MIT",
@@ -23,7 +23,16 @@
 		"url-loader": "^1.1.2",
 		"webpack": "^4.23.1",
 		"webpack-cli": "^3.1.2",
-		"webpack-dev-server": "^3.1.10"
+		"webpack-dev-server": "^3.1.10",
+		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
+		"axios": "^0.19.0",
+		"cross-env": "^5.2.0",
+		"html-webpack-plugin": "^3.2.0",
+		"qs": "^6.7.0",
+		"vue": "^2.6.10",
+		"vue-loader": "^15.7.1",
+		"vue-router": "^3.0.7",
+		"vue-template-compiler": "^2.6.10"
 	},
 	"repository": {
 		"type": "git",
@@ -34,14 +43,5 @@
 	},
 	"homepage": "https://github.com/luckduvip/mogo-ui#readme",
 	"devDependencies": {
-		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
-		"axios": "^0.19.0",
-		"cross-env": "^5.2.0",
-		"html-webpack-plugin": "^3.2.0",
-		"qs": "^6.7.0",
-		"vue": "^2.6.10",
-		"vue-loader": "^15.7.1",
-		"vue-router": "^3.0.7",
-		"vue-template-compiler": "^2.6.10"
 	}
 }
