--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,13 @@
 {
 	"presets": [
-		["@babel/env", 
-	{
+		["@babel/env",
+			{
 
-	}]
+			}
+		],
+		[
+			"@babel/preset-typescript"
+		]
 	],
 	"plugins": [
 		"@babel/plugin-syntax-dynamic-import"
