--- a/package.json
+++ b/package.json
@@ -11,28 +11,31 @@
 	},
 	"dependencies": {
 		"@babel/core": "^7.1.5",
+		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
 		"@babel/preset-env": "^7.1.5",
+		"@babel/preset-typescript": "^7.6.0",
 		"@moohng/postcss-px2vw": "^1.0.2",
+		"axios": "^0.19.0",
 		"babel-loader": "^8.0.4",
+		"cross-env": "^5.2.0",
 		"css-loader": "^1.0.0",
 		"file-loader": "^2.0.0",
+		"html-webpack-plugin": "^3.2.0",
 		"mogo-lib": "^1.0.0",
 		"node-sass": "^4.9.4",
 		"postcss-loader": "^3.0.0",
-		"sass-loader": "^7.1.0",
-		"url-loader": "^1.1.2",
-		"webpack": "^4.23.1",
-		"webpack-cli": "^3.1.2",
-		"webpack-dev-server": "^3.1.10",
-		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
-		"axios": "^0.19.0",
-		"cross-env": "^5.2.0",
-		"html-webpack-plugin": "^3.2.0",
 		"qs": "^6.7.0",
+		"sass-loader": "^7.1.0",
+		"ts-loader": "^6.1.0",
+		"typescript": "^3.6.3",
+		"url-loader": "^1.1.2",
 		"vue": "^2.6.10",
 		"vue-loader": "^15.7.1",
 		"vue-router": "^3.0.7",
-		"vue-template-compiler": "^2.6.10"
+		"vue-template-compiler": "^2.6.10",
+		"webpack": "^4.23.1",
+		"webpack-cli": "^3.1.2",
+		"webpack-dev-server": "^3.1.10"
 	},
 	"repository": {
 		"type": "git",
